# Binance

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_22_1642-d14390cf8126_initial.py  2024_10_22_1739-6abc06457c66_create_users.py
binance/: main.py
src/: config.py  database.py  dependencies.py  main.py  routers.py  sql_app.db
src/app/users/: models.py  routers.py  services.py
src/apps/users/: models.py  routers.py  services.py
src/tests/: test_example.py  test_user.py
